<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sim.muii.camarerocamarero.NewMenuItemActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_name_edittext"
        android:hint="@string/item_name_hint"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="textCapSentences"
        android:imeOptions="actionNext"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_price_input"
        android:hint="@string/item_price_hint"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_below="@+id/item_name_edittext"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/currency_textview"
        android:layout_toStartOf="@+id/currency_textview"
        android:imeOptions="actionSend"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency"
        android:textSize="26dp"
        android:gravity="center"
        android:id="@+id/currency_textview"
        android:layout_below="@+id/item_name_edittext"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/item_price_input" />

    <ImageButton
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_send"
        android:backgroundTint="@color/transparent"
        android:tint="@color/colorAccent"
        android:layout_below="@+id/item_price_input"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/send_button"/>
</RelativeLayout>
