<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.ViewOrderActivity"
    tools:showIn="@layout/activity_view_order">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/order_items_listview" />

    <TextView
        android:id="@+id/total_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/order_items_listview"/>

    <TextView
        android:id="@+id/total_price_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/order_items_listview"
        android:layout_alignBottom="@+id/total_textview"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/empty_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="32sp"
        android:background="@color/colorBackground"
        android:text="@string/empty_list"
        android:gravity="center"
        android:includeFontPadding="false"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish_order_button"
        android:id="@+id/button"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:layout_below="@+id/total_textview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="completeOrder"/>


</RelativeLayout>
